Copied over index.html
For the main page.

--- a/index.html
+++ b/index.html
@@ -1,1 +1,141 @@
+<!DOCTYPE html>
+<html>
+    <head>
+        <meta charset="UTF-8">
+        <title>Javelin Web Designs</title>
 
+        <link rel="stylesheet" href="assets/css/styles.css">
+        <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
+    </head>
+    <body>
+        <header>
+            <h1>javelin web designs</h1>
+            <div>
+                <button id="menu"><i class='bx bx-menu'></i></button>
+            </div>
+        </header>
+
+        <div class="sidebar">
+            <a href="#">About</a>
+            <a href="#">Contact</a>
+        </div>
+
+        <div class="main">
+            <div class="left">
+                <h1>Welcome to<br><span>Javelin Web Designs</span></h1>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec auctor dui lectus, sit amet rhoncus augue imperdiet sed. Vivamus at nulla pulvinar, ultricies ligula vel, vehicula leo. Donec fringilla magna a orci facilisis, id vehicula arcu viverra.</p>
+            </div>
+            <div class="right">
+                <img src="http://127.0.0.1:5500/assets/img/2.png" alt="Website Example" id="image">
+            </div>
+        </div>
+
+        <h2>Our Services</h2>
+
+        <div class="services">
+            <div class="service">
+                <i class='bx bx-code-alt'></i>
+                <h3>Web Development</h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Itaque, eaque harum. Nobis ipsam magni labore?</p>
+            </div>
+
+            <div class="service">
+                <i class='bx bx-code-block'></i>
+                <h3>Development</h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Itaque, eaque harum. Nobis ipsam magni labore?</p>
+            </div>
+
+            <div class="service">
+                <i class='bx bx-edit-alt'></i>
+                <h3>Design</h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Itaque, eaque harum. Nobis ipsam magni labore?</p>
+            </div>
+        </div>
+
+        <h2>Frequently Asked Questions</h2>
+
+        <div class="faq">
+            <div class="faq-container">
+                <p><strong>Why choose Javelin Web Designs</strong></p>
+                <button class="faq-button">
+                    <i class='bx bx-chevron-right'></i>
+                </button>
+
+                <div class="dropdown-content">
+                    <p>Lorem ipsum dolor sit amet</p>
+                </div>
+            </div>
+        </div>
+
+        <div class="faq">
+            <div class="faq-container">
+                <p><strong>How much does a website cost?</strong></p>
+                <button class="faq-button">
+                    <i class='bx bx-chevron-right'></i>
+                </button>
+
+                <div class="dropdown-content">
+                    <p>Lorem ipsum dolor sit amet</p>
+                </div>
+            </div>
+        </div>
+
+        <div class="faq">
+            <div class="faq-container">
+                <p><strong>How do you plan on saving the whales?</strong></p>
+                <button class="faq-button">
+                    <i class='bx bx-chevron-right'></i>
+                </button>
+
+                <div class="dropdown-content">
+                    <p>Lorem ipsum dolor sit amet</p>
+                </div>
+            </div>
+        </div>
+
+        <h2>Basic Pricing</h2>
+
+        <div class="pricing">
+            <div class="pricing-holder">
+                <h3>Basic Design</h3>
+                <p>Price: $1</p>
+                <p>Pages: 1</p>
+                <p>Revisions: 3</p>
+                <button>Contact Us Now</button>
+            </div>
+            <div class="pricing-holder">
+                <h3>Advanced Design</h3>
+                <p>Price: $1</p>
+                <p>Pages: 1</p>
+                <p>Revisions: 3</p>
+                <button>Contact Us Now</button>
+            </div>
+            <div class="pricing-holder">
+                <h3>Complex Design</h3>
+                <p>Price: $1</p>
+                <p>Pages: 1</p>
+                <p>Revisions: 3</p>
+                <button>Contact Us Now</button>
+            </div>
+        </div>
+
+        <div class="sub-pricing">
+            <div class="pricing-holder">
+                <h3>Looking for something different?</h3>
+                <p>Price: Negotiable</p>
+                <p>Pages: Negotiable</p>
+                <p>Revisions: Negotiable</p>
+                <button>Contact Us Now</button>
+            </div>
+        </div>
+
+        <h2>Testimonials</h2>
+
+        <div class="testimonial-holder">
+            <p>I hit up Javelin Web Designs in need of a portfolio and they delivered, very fast, very efficient, and great customer service they listen to all your needs and are willing to work wit you on whatever changes you have, they are awesome! I definitely recommend checking them out!</p>
+        </div>
+
+        <script src="assets/js/sidebar-handler.js"></script>
+        <script src="assets/js/image-handler.js"></script>
+    </body>
+</html>
