--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         </header>
 
         <div class="sidebar">
-            <a href="#">About</a>
+            <a href="about">About</a>
             <a href="#">Contact</a>
         </div>
 
