--- a/index.html
+++ b/index.html
@@ -2,14 +2,14 @@
 <html>
     <head>
         <meta charset="UTF-8">
-        <title>Javelin Web Designs</title>
+        <title>Javelin Web Design</title>
 
         <link rel="stylesheet" href="assets/css/styles.css">
         <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     </head>
     <body>
         <header>
-            <h1>javelin web designs</h1>
+            <h1>javelin web design</h1>
             <div>
                 <button id="menu"><i class='bx bx-menu'></i></button>
             </div>
@@ -22,7 +22,7 @@
 
         <div class="main">
             <div class="left">
-                <h1>Welcome to<br><span>Javelin Web Designs</span></h1>
+                <h1>Welcome to<br><span>Javelin Web Design</span></h1>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec auctor dui lectus, sit amet rhoncus augue imperdiet sed. Vivamus at nulla pulvinar, ultricies ligula vel, vehicula leo. Donec fringilla magna a orci facilisis, id vehicula arcu viverra.</p>
             </div>
             <div class="right">
@@ -56,7 +56,7 @@
 
         <div class="faq">
             <div class="faq-container">
-                <p><strong>Why choose Javelin Web Designs</strong></p>
+                <p><strong>Why choose Javelin Web Design?</strong></p>
                 <button class="faq-button">
                     <i class='bx bx-chevron-right'></i>
                 </button>
@@ -132,7 +132,7 @@
         <h2>Testimonials</h2>
 
         <div class="testimonial-holder">
-            <p>I hit up Javelin Web Designs in need of a portfolio and they delivered, very fast, very efficient, and great customer service they listen to all your needs and are willing to work wit you on whatever changes you have, they are awesome! I definitely recommend checking them out!</p>
+            <p>I hit up Javelin Web Design in need of a portfolio and they delivered, very fast, very efficient, and great customer service they listen to all your needs and are willing to work wit you on whatever changes you have, they are awesome! I definitely recommend checking them out!</p>
         </div>
 
         <script src="assets/js/sidebar-handler.js"></script>
