Added stuff to testimonials

--- a/index.html
+++ b/index.html
@@ -133,6 +133,8 @@
 
         <div class="testimonial-holder">
             <p>I hit up Javelin Web Design in need of a portfolio and they delivered, very fast, very efficient, and great customer service they listen to all your needs and are willing to work wit you on whatever changes you have, they are awesome! I definitely recommend checking them out!</p>
+            <p>• ShiayaRBLX</p>
+            <a href="#">• Check out the site here!</a>
         </div>
 
         <script src="assets/js/sidebar-handler.js"></script>
