Added links to header

--- a/contact/index.html
+++ b/contact/index.html
@@ -12,7 +12,8 @@
         <header>
             <h1>javelin web design</h1>
             <div>
-                <button id="menu"><i class='bx bx-menu'></i></button>
+                <a href="/./">Home</a>
+                <a href="/./about/">About</a>
             </div>
         </header>
 
