--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec auctor dui lectus, sit amet rhoncus augue imperdiet sed. Vivamus at nulla pulvinar, ultricies ligula vel, vehicula leo. Donec fringilla magna a orci facilisis, id vehicula arcu viverra.</p>
             </div>
             <div class="right">
-                <img src="http://127.0.0.1:5500/assets/img/2.png" alt="Website Example" id="image">
+                <img src="assets/img/2.png" alt="Website Example" id="image">
             </div>
         </div>
 
@@ -100,21 +100,21 @@
                 <p>Price: $1</p>
                 <p>Pages: 1</p>
                 <p>Revisions: 3</p>
-                <button>Contact Us Now</button>
+                <button id="pricing-button">Contact Us Now</button>
             </div>
             <div class="pricing-holder">
                 <h3>Advanced Design</h3>
                 <p>Price: $1</p>
                 <p>Pages: 1</p>
                 <p>Revisions: 3</p>
-                <button>Contact Us Now</button>
+                <button id="pricing-button">Contact Us Now</button>
             </div>
             <div class="pricing-holder">
                 <h3>Complex Design</h3>
                 <p>Price: $1</p>
                 <p>Pages: 1</p>
                 <p>Revisions: 3</p>
-                <button>Contact Us Now</button>
+                <button id="pricing-button">Contact Us Now</button>
             </div>
         </div>
 
@@ -124,7 +124,7 @@
                 <p>Price: Negotiable</p>
                 <p>Pages: Negotiable</p>
                 <p>Revisions: Negotiable</p>
-                <button>Contact Us Now</button>
+                <button id="pricing-button">Contact Us Now</button>
             </div>
         </div>
 
@@ -158,5 +158,6 @@
         <script src="assets/js/image-handler.js"></script>
         <script src="assets/js/secret.js"></script>
         <script src="assets/js/scroll-effects.js"></script>
+        <script src="assets/js/button-handler.js"></script>
     </body>
 </html>
