--- a/about/index.html
+++ b/about/index.html
@@ -1,1 +1,43 @@
+<!DOCTYPE html>
+<html>
+  <head>
+    <link rel="stylesheet" href="Main.css">
+  </head>
+  <body>
 
+    <div id="main">
+      <button class="openbtn" onclick="openNav()">
+        &#9776;
+      </button>
+      <h1>
+        Welcome to Javelin Web Design!
+      </h1>
+    </div>
+      
+  <p id='showcase'>
+    Here, we will showcase a number of exhibits, including: <br> • Our dev's top songs to listen to while working <br> • Some projects we're working on <br> • And more!
+  </p>
+
+  <h2 id="meetthedevs"> 
+    Meet the Developers!
+  </h2>
+  
+  <div id="developerdiv">
+     <div id="minidiv"><h3 id="mini">MiniSowgro <br> <img id="minipic" src="https://i.imgur.com/dkO9iIU.jpeg" alt="MiniSowgro's profile picture" /> <br> • Sub Programmer <br> • HTML, CSS, <br> • Javascript, Python <br> • TV Girl fan </h3></div>
+     <div id="orangediv"><h3 id="orange">OrangeShirtCoder <br> <img id="orangepic" src="https://i.imgur.com/aoCMUQL.jpeg" alt="OrangeShirtCoder's profile picture" /> <br> • Lead Programmer <br> • Python, CSS, HTML, <br> • Javascript, Lua <br> • likes hotdogs </h3></div>
+     <div id="ultradiv"><h3 id="ultra">UltraFlames7655 <br> <img id="ultrapic" src="https://i.imgur.com/Zdx1kMB.jpeg" alt="UltraFlames7655's profile picture" /> <br> • Supporting Programmer <br> • Python, CSS, HTML <br> placeholder_text </h3></div>
+  </div>
+
+
+  <div id='meettheteam'>
+    <h3 id='cyrus'>Cyrus W <br> <img id='cyruspic' src="https://i.imgur.com/ZKFqPuS_d.webp?maxwidth=760&fidelity=grand" alt="Cyrus's profile picture" /> <br> • Sole benefactor <br> • Cannot code <br> • Will not buy us a server </h3>
+
+    <div id="mySidebar" class="sidebar">
+     <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
+     <a href="https://minisowgro.github.io/javelin-web-hq/about.html">About</a>
+     <a href="#">Services</a>
+     <a href="#">Contact</a>
+    </div>  
+  <script src="Main.js"> </script>
+  </body>
+</html>
