--- a/about/index.html
+++ b/about/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <link rel="stylesheet" href="Main.css">
+    <link rel="stylesheet" href="/about/Main.css">
   </head>
   <body>
 
