--- a/about/index.html
+++ b/about/index.html
@@ -38,6 +38,6 @@
      <a href="#">Services</a>
      <a href="#">Contact</a>
     </div>  
-  <script src="Main.js"> </script>
+  <script src="/about/Main.js"> </script>
   </body>
 </html>
