--- a/about/index.html
+++ b/about/index.html
@@ -1,21 +1,29 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <link rel="stylesheet" href="main.css">
-  </head>
-  <body>
 
-    <div id="main">
-      <button class="openbtn" onclick="openNav()">
-        &#9776;
-      </button>
-      <h1>
-        Welcome to Javelin Web Design!
-      </h1>
+  <head>
+    
+    <meta charset="UTF=8">
+    <title>Javelin Web Design</title>
+    <link rel="stylesheet" href="Main.css">
+    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
+  </head>
+
+  <body>
+    <header>
+      <h1>javelin web designs</h1>
+      <div>
+          <button id="menu"><i class='bx bx-menu'></i></button>
+      </div>
+  </header>
+
+    <div class="sidebar">
+        <a href="#">Login</a>
+        <a href="#">Signup</a>
     </div>
       
   <p id='showcase'>
-    Here, we will showcase a number of exhibits, including: <br> • Our dev's top songs to listen to while working <br> • Some projects we're working on <br> • And more!
+    Here at javelin, we hold a number of ideals and values close to our hearts, such as: <br> • Capitalism <br> • Family <br> • Resilience 
   </p>
 
   <h2 id="meetthedevs"> 
@@ -23,14 +31,25 @@
   </h2>
   
   <div id="developerdiv">
-     <div id="minidiv"><h3 id="mini">MiniSowgro <br> <img id="minipic" src="https://i.imgur.com/dkO9iIU.jpeg" alt="MiniSowgro's profile picture" /> <br> • Sub Programmer <br> • HTML, CSS, <br> • Javascript, Python <br> • TV Girl fan </h3></div>
-     <div id="orangediv"><h3 id="orange">OrangeShirtCoder <br> <img id="orangepic" src="https://i.imgur.com/aoCMUQL.jpeg" alt="OrangeShirtCoder's profile picture" /> <br> • Lead Programmer <br> • Python, CSS, HTML, <br> • Javascript, Lua <br> • likes hotdogs </h3></div>
-     <div id="ultradiv"><h3 id="ultra">UltraFlames7655 <br> <img id="ultrapic" src="https://i.imgur.com/Zdx1kMB.jpeg" alt="UltraFlames7655's profile picture" /> <br> • Supporting Programmer <br> • Python, CSS, HTML <br> placeholder_text </h3></div>
+     <div id="minidiv"><h3 id="mini">MiniSowgro <br> <img id="minipic" src="https://i.imgur.com/dkO9iIU.jpeg" alt="MiniSowgro's profile picture" /> <br> • Sub Developer  <br> • CSS, HTML, <br> JavaScript, Python <br> • Knows who joe is  </h3></div>
+     <div id="orangediv"><h3 id="orange">OrangeShirtCoder <br> <img id="orangepic" src="https://i.imgur.com/aoCMUQL.jpeg" alt="OrangeShirtCoder's profile picture" /> <br> • Lead Developer <br> • CSS, Javascript, HTML, <br> Lua, Python, Scratch, Linux <br> • Ethernet Cable Enthusiast</h3></div>
+     <div id="ultradiv"><h3 id="ultra">UltraFlames7655 <br> <img id="ultrapic" src="https://i.imgur.com/Zdx1kMB.jpeg" alt="UltraFlames7655's profile picture" /> <br> • Supporting Developer <br> • Python  <br> • placeholder_text </h3></div>
   </div>
 
 
-  <div id='meettheteam'>
-    <h3 id='cyrus'>Cyrus W <br> <img id='cyruspic' src="https://i.imgur.com/ZKFqPuS_d.webp?maxwidth=760&fidelity=grand" alt="Cyrus's profile picture" /> <br> • Sole benefactor <br> • Cannot code <br> • Will not buy us a server </h3>
+  <h2 id="meettheteam">
+    Meet the rest of the Team!
+  </h2>
+
+
+  <div id="developerdiv">
+
+    <h3 id="cyrus">Cyrus W <br> <img id='cyruspic' src="https://i.imgur.com/ZKFqPuS.jpeg" alt="Cyrus's Profile Picture" /> <br> • Sole Benefactor <br> • Commits Grand Larceny <br> • Will not buy us a server </h3>
+    <h3 id="cyrus">Houndz <br> <img id='houndzpic' src="https://i.imgur.com/XJScGrO.jpeg" alt="Houndz's Profile Picture" /> <br> • Unpaid Intern <br> • Apprentice <br> • placeholder_text </h3>
+
+
+  </div>
+
 
     <div id="mySidebar" class="sidebar">
      <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
