--- a/about/index.html
+++ b/about/index.html
@@ -6,7 +6,7 @@
     <meta charset="UTF=8">
     <title>Javelin Web Design</title>
     <link rel="stylesheet" href="Main.css">
-    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
+    <link href='main.css' rel='stylesheet'>
   </head>
 
   <body>
