--- a/about/index.html
+++ b/about/index.html
@@ -11,11 +11,12 @@
 
   <body>
     <header>
-      <h1>javelin web designs</h1>
-      <div>
-          <button id="menu"><i class='bx bx-menu'></i></button>
-      </div>
-  </header>
+        <h1>javelin web design</h1>
+        <div>
+          <a href="/./">Home</a>
+          <a href="/./about/">About</a>
+        </div>
+    </header>
 
     <div class="sidebar">
         <a href="#">Login</a>
