--- a/about/index.html
+++ b/about/index.html
@@ -14,7 +14,7 @@
         <h1>javelin web design</h1>
         <div>
           <a href="/./">Home</a>
-          <a href="/./about/">About</a>
+          <a href="/./contact/">Contact</a>
         </div>
     </header>
 
