--- a/about/index.html
+++ b/about/index.html
@@ -33,7 +33,7 @@
   
   <div id="developerdiv">
      <div id="minidiv"><h3 id="mini">MiniSowgro <br> <img id="minipic" src="https://i.imgur.com/dkO9iIU.jpeg" alt="MiniSowgro's profile picture" /> <br> • Sub Developer  <br> • CSS, HTML, <br> JavaScript, Python <br> • Knows who joe is  </h3></div>
-     <div id="orangediv"><h3 id="orange">OrangeShirtCoder <br> <img id="orangepic" src="https://i.imgur.com/aoCMUQL.jpeg" alt="OrangeShirtCoder's profile picture" /> <br> • Lead Developer <br> • CSS, Javascript, HTML, <br> Lua, Python, Scratch, Linux <br> • Ethernet Cable Enthusiast</h3></div>
+     <div id="orangediv"><h3 id="orange">OrangeShirtCoder <br> <img id="orangepic" src="https://i.imgur.com/aoCMUQL.jpeg" alt="OrangeShirtCoder's profile picture" /> <br> • Lead Developer <br> • CSS, Javascript, HTML, <br> Lua, Python, Linux <br> • Ethernet Cable Enthusiast</h3></div>
      <div id="ultradiv"><h3 id="ultra">UltraFlames7655 <br> <img id="ultrapic" src="https://i.imgur.com/Zdx1kMB.jpeg" alt="UltraFlames7655's profile picture" /> <br> • Supporting Developer <br> • Python  <br> • placeholder_text </h3></div>
   </div>
 
