--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                 <div class="service">
                     <i class='bx bx-code-alt'></i>
                     <h3>Web Development</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Itaque, eaque harum. Nobis ipsam magni labore?</p>
+                    <p>Javelin strives to create professional, creative, and interactive websites for all. We specialise in small businesses and individuals, which is why our pricing is so competitive. </p>
                 </div>
     
                 <div class="service">
