--- a/index.html
+++ b/index.html
@@ -51,13 +51,13 @@
     
                 <div class="service">
                     <i class='bx bx-code-block'></i>
-                    <h3>Development</h3>
+                    <h3>Design</h3>
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Itaque, eaque harum. Nobis ipsam magni labore?</p>
                 </div>
     
                 <div class="service">
                     <i class='bx bx-edit-alt'></i>
-                    <h3>Design</h3>
+                    <h3>Editing</h3>
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Itaque, eaque harum. Nobis ipsam magni labore?</p>
                 </div>
             </div>
