--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                 <div class="service">
                     <i class='bx bx-code-alt'></i>
                     <h3>Web Development</h3>
-                    <p>Javelin strives to create professional, creative, and interactive websites for all. We specialise in small businesses and individuals, which is why our pricing is so competitive. </p>
+                    <p>Javelin strives to create professional, creative, and interactive websites for all. We specialise in small businesses and individuals, which is why our pricing is so competitive.</p>
                 </div>
     
                 <div class="service">
@@ -145,6 +145,24 @@
                 <p>I hit up Javelin Web Design in need of a portfolio and they delivered, very fast, very efficient, and great customer service they listen to all your needs and are willing to work wit you on whatever changes you have, they are awesome! I definitely recommend checking them out!</p>
                 <p class="reference-p">• ShiayaRBLX</p>
                 <a href="https://shiayadev.github.io/ShiayaRBLX/">• Check out the site here!</a>
+            </div>
+
+            <h2 id="hidden">Other Examples</h2>
+
+            <div class="example-holder" id="hidden">
+                <div class="interactive">
+                    <h3>Interactive Animations</h3>
+                    <video src="assets/videos/1.webm" loop autoplay muted width="400px" height="200px"></video>
+                    <video src="assets/videos/5.webm" loop autoplay muted width="400px" height="200px"></video>
+                    <video src="assets/videos/6.webm" loop autoplay muted width="400px" height="200px"></video>
+                </div>
+
+                <div class="accent">
+                    <h3>Accent Animations</h3>
+                    <video src="assets/videos/2.webm" loop autoplay muted width="400px" height="200px"></video>
+                    <video src="assets/videos/3.webm" loop autoplay muted width="400px" height="200px"></video>
+                    <video src="assets/videos/4.webm" loop autoplay muted width="400px" height="200px"></video>
+                </div>
             </div>
     
             <footer>
