--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                 <div class="service">
                     <i class='bx bx-edit-alt'></i>
                     <h3>Editing</h3>
-                    <p>Already hav a website and want to give it a revamp? Just contact us and we'll get onto it, bringing a possibly dated webpage into the modern era.</p>
+                    <p>Already have a website and want to give it a revamp? Just contact us and we'll get onto it, bringing a possibly dated webpage into the modern era.</p>
                 </div>
             </div>
     
