--- a/about/index.html
+++ b/about/index.html
@@ -13,8 +13,8 @@
     <header>
         <h1>javelin web design</h1>
         <div>
-          <a href="/./">Home</a>
-          <a href="/./contact/">Contact</a>
+          <a href="https://javelinwebdesign.com">Home</a>
+          <a href="https://javelinwebdesign.com/contact">Contact</a>
         </div>
     </header>
 
