--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             </header>
     
             <div class="sidebar">
-                <a href="about/">About</a>
+                <a href="https://javelinwebdesign.com/about/">About</a>
                 <a href="contact/">Contact</a>
             </div>
     
